Detect new brand LEMFO and Detect devices for existing brands: DEXP, SPC, OPPO, Krüger&Matz, Alcatel, Xiaomi and Fix Meizu browser (#6926)
* feat(device) detect new brand LEMFO model: LEM14
feat(device) detect brand DEXP model: Ursus L310i
feat(device) detect brand SPC model: Gravity 2
feat(device) detect brand OPPO model: A53 (CPH2131)
feat(device) detect brand Krüger&Matz model: DRIVE 8

feat(device) added test for brand Xiaomi model: Redmi Note 7S

* fix(device) fixed detection of Meizu brand
feat(device) detect brand Alcatel model: One Touch Idol 3 5.5" (AM-H200)

issue #6909

* feat(device) exclude device Fast for Meizu

issue #6909

* feat(device) detect brand Xiaomi model: Redmi 9C NFC, Redmi 8A Dual
feat(device) added test for brand Xiaomi models: Redmi 9C, Redmi 9A

* fix: test

Co-authored-by: Stefan Giehl <stefan@matomo.org>

--- a/Tests/fixtures/phablet.yml
+++ b/Tests/fixtures/phablet.yml
@@ -7610,3 +7610,75 @@
     model: Redmi Note 9 Pro Max
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; Redmi Note 7S) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/95.0.4638.74 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 95.0.4638.74
+    engine: Blink
+    engine_version: ""
+  device:
+    type: phablet
+    brand: Xiaomi
+    model: Redmi Note 7S
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 9; zh-CN; MZ-Note9 Build/MRA58K) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/73.0.3683.121 MZBrowser/9.4.3 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: Meizu Browser
+    version: 9.4.3
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: phablet
+    brand: Meizu
+    model: Note 9
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 11; zh-CN; MZ-Infinix X695C Build/MRA58K) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/57.0.2987.108 MZBrowser/2.2.010 UWS/ Mobile Safari/537.36
+  os:
+    name: Android
+    version: "11"
+    platform: ""
+  client:
+    type: browser
+    name: Meizu Browser
+    version: 2.2.010
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: phablet
+    brand: Infinix
+    model: Note 10 Pro
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 7.0; zh-CN; MZ-M5 Note Build/MRA58K) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/73.0.3683.121 MZBrowser/8.18.0 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "7.0"
+    platform: ""
+  client:
+    type: browser
+    name: Meizu Browser
+    version: 8.18.0
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: phablet
+    brand: Meizu
+    model: M5 Note
+  os_family: Android
+  browser_family: Chrome
