--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -1680,7 +1680,7 @@ Arian Space:
 
 # Alcatel (alcatelmobile.com)
 Alcatel:
-  regex: 'Alcatel|Alc(?!or )[a-z0-9]+|One[ _]?Touch|idol3|TIMXL|(?:(?:4003[AJ]|4009[ADEFIKMSX]|4013[DEJKMX]|4014[ADEKMX]|4015[ADNTX]|4016[ADX]|4017[ADEFSX]|4018[ADEFMX]|4024[DEX]|4027[ADNX]|4028[AEJS]|4032[ADEX]|4034[ADEFGLTX]|4035[ADXY]|4045[ADELX]|4047[ADFGNX]|4049[DEGMX]|4060[SW]|4087U|4114E|5001[ADJTU]|5002[ABDEFHRSX]|5003[ADGU]|5006[DG]|5007[AGU]|5008[ADTUY]|5009[AD]|5010[DEGSUX]|5011A|5012[DFG]|5015[ADEX]|5016[AJX]|5017[ABDEOX]|5019D|5022[DEX]|5023[EF]|5024[ADFJ]|5025[DEG]|5026[ADJ]|5027B|5028[ADY]|5029[ADEFY]|5030[ADEFU]|5032W|5033(?:XR|[ADEFGJMOQSTXY])|5034D|5036D|5038[ADEX]|5039[DY]|5041[CD]|5042[ADEFGTWX]|5044[ADGIKOPSTY]|5045[ADFGIJTXY]|5046[ADGIJSTUY]|5047[DIUY]|5048[AIUY]|5049[EGSWZ]|5050[ASXY]|5051[ADEJMTWX]|5052[ADY]|5053[ADKY]|5054[ADNSTWX]|5056[ADEGIJMNTUWX]|5057M|5058[AIY]|5059[ADIJSTXYZ]|5060[ADJ]|5061[KU]|5065[ADNWX]|5070D|5080[ADFQUX]|5085[ABCDGHIJNOQY]|5086[ADY]|5090[AIY]|5095[IKY]|5098[OS]|5099[ADIUY]|5116J|5145A|6016[ADEX]|6025H|6036[AXY]|6037[BKY]|6039[AHJKSY]|6042D|6043[AD]|6044D|6045[BFIKOXY]|6050[AFY]|6055[ABDHIKPUYZ]|6056H|6058[ADX]|6060[SXC]|6062W|6070K|7040[ADEFKRT]|7041[DX]|7042A|7043[AEKY]|7044[AX]|7045Y|7048[ASWX]|7053D|7055A|7070X|7071[ADX]|8030Y|8050[DEGX]|8063|8088[MQX]|8094M|9001[DIX]|9002X|9003[AX]|9005X|9007[ATX]|9008[ADIJNTUX]|9009G|9010X|9013[AX]|9020A|9022X|9024O|9026X|9027[FQTWX]|9029Z|9032[WXZ]|9203A|A(?:46[46]BG|57[04]BL|576CC|621BL|50[13]DL|57[17]VL)|I213|I216[AX]|(?<!\.)80(?:82|6[78]|5[12]))(?:_(?:EEA|RU|TR))?|P3[36]0X)(?:[);/ ]|$)'
+  regex: 'Alcatel|Alc(?!or )[a-z0-9]+|One[ _]?Touch|idol3|TIMXL|(?:(?:4003[AJ]|4009[ADEFIKMSX]|4013[DEJKMX]|4014[ADEKMX]|4015[ADNTX]|4016[ADX]|4017[ADEFSX]|4018[ADEFMX]|4024[DEX]|4027[ADNX]|4028[AEJS]|4032[ADEX]|4034[ADEFGLTX]|4035[ADXY]|4045[ADELX]|4047[ADFGNX]|4049[DEGMX]|4060[SW]|4087U|4114E|5001[ADJTU]|5002[ABDEFHRSX]|5003[ADGU]|5006[DG]|5007[AGU]|5008[ADTUY]|5009[AD]|5010[DEGSUX]|5011A|5012[DFG]|5015[ADEX]|5016[AJX]|5017[ABDEOX]|5019D|5022[DEX]|5023[EF]|5024[ADFJ]|5025[DEG]|5026[ADJ]|5027B|5028[ADY]|5029[ADEFY]|5030[ADEFU]|5032W|5033(?:XR|[ADEFGJMOQSTXY])|5034D|5036D|5038[ADEX]|5039[DY]|5041[CD]|5042[ADEFGTWX]|5044[ADGIKOPSTY]|5045[ADFGIJTXY]|5046[ADGIJSTUY]|5047[DIUY]|5048[AIUY]|5049[EGSWZ]|5050[ASXY]|5051[ADEJMTWX]|5052[ADY]|5053[ADKY]|5054[ADNSTWX]|5056[ADEGIJMNTUWX]|5057M|5058[AIY]|5059[ADIJSTXYZ]|5060[ADJ]|5061[KU]|5065[ADNWX]|5070D|5080[ADFQUX]|5085[ABCDGHIJNOQY]|5086[ADY]|5090[AIY]|5095[IKY]|5098[OS]|5099[ADIUY]|5116J|5145A|6016[ADEX]|6025H|6036[AXY]|6037[BKY]|6039[AHJKSY]|6042D|6043[AD]|6044D|6045[BFIKOXY]|6050[AFY]|6055[ABDHIKPUYZ]|6056H|6058[ADX]|6060[SXC]|6062W|6070K|7040[ADEFKRT]|7041[DX]|7042A|7043[AEKY]|7044[AX]|7045Y|7048[ASWX]|7053D|7055A|7070X|7071[ADX]|8030Y|8050[DEGX]|8063|8088[MQX]|8094M|9001[DIX]|9002X|9003[AX]|9005X|9007[ATX]|9008[ADIJNTUX]|9009G|9010X|9013[AX]|9020A|9022X|9024O|9026X|9027[FQTWX]|9029Z|9032[WXZ]|9203A|A(?:46[46]BG|57[04]BL|576CC|621BL|50[13]DL|57[17]VL)|I213|I216[AX]|(?<!\.)80(?:82|6[78]|5[12]))(?:_(?:EEA|RU|TR))?|P3[36]0X|AM-H200)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '4087U'
@@ -1785,7 +1785,7 @@ Alcatel:
       model: 'One Touch Idol 2S'
     - regex: '6039[AHJKYS]|idol3'
       model: 'One Touch Idol 3'
-    - regex: '6045[BFIKOYX]'
+    - regex: '6045[BFIKOYX]|AM-H200'
       model: 'One Touch Idol 3 5.5"'
     - regex: '6055[ABDHIKPUYZ]'
       model: 'One Touch Idol 4'
@@ -5190,7 +5190,7 @@ Desay:
 
 # DEXP (dexp.club)
 DEXP:
-  regex: 'DEXP|(?:Ursus|Ixion)[ _]([^;/)]+)|H135[ _]Build|Larus_TV1|Ixion(?:ML4.7|ES250)|M150Storm|(?:SENIOR|F4[38]D8000K|VA(?:[12]10|170)|ML450|MS[56]50|BL(?:[123]50|160|155)|BS(?:155|160|[1256]50)|(?<!ILIUM )S(?:3[78]0|2[89]0|670)|AL(?:[12]40|[23]50)|AS(?:155|[123]60)| (?:N280i|P310|P380i?|R1[18]0|Q110|E1[78]0|E[12]10|B(?:450|340|35[05])|M445|T155|U43F8000Q|A(?:1[456]0|340|[34]55)|GS15[035]|GL[23]55|G25[05]|G15[05]|ES750|XL150|Z[1-4]55|H170|H310|P510|L2[17]0)|Z250|A440|N[13]80i|(?<!VOX )G450|G660|Q[123]10|N[234]10|N[35]70|EX111)(?:[);/ ]|$)'
+  regex: 'DEXP|(?:Ursus|Ixion)[ _]([^;/)]+)|H135[ _]Build|Larus_TV1|Ixion(?:ML4.7|ES250)|M150Storm|(?:SENIOR|F4[38]D8000K|VA(?:[12]10|170)|ML450|MS[56]50|BL(?:[123]50|160|155)|BS(?:155|160|[1256]50)|(?<!ILIUM )S(?:3[78]0|2[89]0|670)|AL(?:[12]40|[23]50)|AS(?:155|[123]60)| (?:N280i|P310|P380i?|R1[18]0|Q110|E1[78]0|E[12]10|B(?:450|340|35[05])|M445|T155|U43F8000Q|A(?:1[456]0|340|[34]55)|GS15[035]|GL[23]55|G25[05]|G15[05]|ES750|XL150|Z[1-4]55|H170|H310|P510|L2[17]0)|Z250|A440|N[13]80i|L310i|(?<!VOX )G450|G660|Q[123]10|N[234]10|N[35]70|EX111)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Ixion[_ ]([^;/]+)(?: Build|\))'
@@ -5221,7 +5221,7 @@ DEXP:
     - regex: 'Ursus[ _]([^;/)]+)(?: Build|[);])'
       model: 'Ursus $1'
       device: 'tablet'
-    - regex: '(VA[21]10|VA170|E210|R1[18]0|Q110|N280i|P380i?|P[35]10|S2[89]0|S3[78]0|S670|H170|H310|L2[17]0|N[13]80i|N[234]10|E1[178]0|Q[123]10|EX111|N[35]70)(?:[);/ ]|$)'
+    - regex: '(VA[21]10|VA170|E210|R1[18]0|Q110|N280i|P380i?|P[35]10|S2[89]0|S3[78]0|S670|H170|H310|L2[17]0|N[13]80i|N[234]10|E1[178]0|Q[123]10|EX111|N[35]70|L310i)(?:[);/ ]|$)'
       model: 'Ursus $1'
       device: 'tablet'
 
@@ -9730,7 +9730,7 @@ Mymaga:
 
 # Krüger&Matz or Kruger&Matz (www.krugermatz.com)
 Krüger&Matz:
-  regex: 'Kruger[ _&]Matz|KrugerMatz[ _]|FLOW ?5PLUS|FLOW 4 PLUS|Flow 9|FLOW_5|FLOW7|FLOW6(?:S|Lite)|DRIVE9|DRIVE[_ ]6S?|MOVE8mini|MOVE9|MOVE_|LIVE_6plus|LIVE 5 PLUS|Live [89]|LIVE4_KM043[89]|LIVE 7S|Flow 7S|KM(?:106[679]|1065G|0701_1|0702|0805_1|1070)'
+  regex: 'Kruger[ _&]Matz|KrugerMatz[ _]|FLOW ?5PLUS|FLOW 4 PLUS|Flow 9|FLOW_5|FLOW7|FLOW6(?:S|Lite)|DRIVE9|DRIVE 8|DRIVE[_ ]6S?|MOVE8mini|MOVE9|MOVE_|LIVE_6plus|LIVE 5 PLUS|Live [89]|LIVE4_KM043[89]|LIVE 7S|Flow 7S|KM(?:106[679]|1065G|0701_1|0702|0805_1|1070)'
   device: 'smartphone'
   models:
     - regex: 'MOVE8mini'
@@ -9741,7 +9741,7 @@ Krüger&Matz:
       model: 'MOVE $1'
     - regex: 'DRIVE 4 mini LTE'
       model: 'DRIVE 4 mini LTE'
-    - regex: 'DRIVE[ _]?([4569][S]?)(?:[);/ ]|$)'
+    - regex: 'DRIVE[ _]?([45689][S]?)(?:[);/ ]|$)'
       model: 'DRIVE $1'
     - regex: 'FLOW ?([54]) ?PLUS(?:[);/ ]|$)'
       model: 'FLOW $1 Plus'
@@ -11716,99 +11716,6 @@ Fourel:
     - regex: 'EASY ?SMART ?M([32])'
       model: 'Easy Smart M$1'
 
-# Meizu
-Meizu:
-  regex: 'Meizu|MZ-[a-z]|(?<!POCO )(M04[05]|MZ-16th(?: Plus)?|MZ-16[st]|M7[12]1C|M35[1356]|M612C|M578CA|M181[36]|M1822|M681C|M6T|MX[ -]?[2345](?: Pro)?|(?:MZ-)?m[1-6] note|M621C|M1852|M57[18]C|M3[ESX]|M3 Max|M031|m1 metal|M1 E|(?<!Nubia |STELLAR )M2|M2 E|M5s Build|PRO [567]|PRO 7-[HS]| 15 Lite| 16th|MZ-15 (?:Lite|Plus)|15 Plus|MZ-16 X| 16 X| 16T|MX6)(?:[);/ ]|$)'
-  device: 'smartphone'
-  models:
-    - regex: '(?:MZ-)?M571C'
-      device: 'phablet'
-      model: 'M2 Note'
-    - regex: '(?:MZ-|Meizu-)?m([1-6])[_ ]note(?:[);/ ]|$)'
-      device: 'phablet'
-      model: 'M$1 Note'
-    - regex: '(?:MZ-)?M1 E(?:[);/ ]|$)'
-      model: 'M1E'
-    - regex: 'M2 E(?:[);/ ]|$)'
-      model: 'M2E'
-    - regex: '(?:MZ-)?M578C[A]?|M2(?:[);/ ]|$)'
-      model: 'M2'
-    - regex: 'M681C(?:[);/ ]|$)'
-      model: 'M3 Note'
-      device: 'phablet'
-    - regex: 'M621C(?:[);/ ]|$)'
-      model: 'M5 Note'
-      device: 'phablet'
-    - regex: 'M711C(?:[);/ ]|$)'
-      model: 'M6'
-    - regex: 'M721C(?:[);/ ]|$)'
-      model: 'M6 Note'
-      device: 'phablet'
-    - regex: '(M6T|MX6|M3E|M3X)(?:[);/ ]|$)'
-      model: '$1'
-    - regex: '(?:MZ-)?M3S(?:[);/ ]|$)'
-      model: 'M3s'
-    - regex: '(?:MZ-)?M3 Max(?:[);/ ]|$)'
-      model: 'M3 Max'
-    - regex: 'M5S|M612C'
-      model: 'M5S'
-    - regex: '(M04[05]|MX[ -]?2)(?:[);/ ]|$)'
-      model: 'MX2'
-    - regex: '(M35[1356]|MX[ -]?3)(?:[);/ ]|$)'
-      model: 'MX3'
-    - regex: 'MX[ -]?4 Pro(?:[);/ ]|$)'
-      model: 'MX4 Pro'
-    - regex: 'MX[ -]?4(?:[);/ ]|$)'
-      model: 'MX4'
-    - regex: '(Meizu[- _])?MX[ -]?5(?:[);/ ]|$)'
-      model: 'MX5'
-    - regex: 'm1 metal'
-      model: 'M1 Metal'
-    - regex: 'M1813(?:[);/ ]|$)'
-      model: 'M8'
-    - regex: '(?:M1816|M8 lite)(?:[);/ ]|$)'
-      model: 'M8 Lite'
-    - regex: 'M8c Pro(?:[);/ ]|$)'
-      model: 'M8c Pro'
-    - regex: 'PRO 7-[HS](?:[);/ ]|$)'
-      model: 'PRO 7'
-    - regex: 'PRO ([76]) Plus(?:[);/ ]|$)'
-      model: 'PRO $1 Plus'
-    - regex: 'PRO ([567])'
-      model: 'PRO $1'
-    - regex: 'M031(?:[);/ ]|$)'
-      model: 'MX Dual Core'
-    - regex: 'M1852(?:[);/ ]|$)'
-      model: 'X8'
-    - regex: 'M1822(?:[);/ ]|$)'
-      model: 'Note 8'
-    - regex: '(?:MZ-)?16T(?:[);/ ]|$)'
-      model: '16T'
-    - regex: '(?:MZ-)?16th Plus(?:[);/ ]|$)'
-      model: '16th Plus'
-    - regex: '(?:MZ-)?15 Plus(?:[);/ ]|$)'
-      model: '15 Plus'
-    - regex: '(?:MZ-15 Lite| 15 Lite)(?:[);/ ]|$)'
-      model: '15 Lite'
-    - regex: 'MZ-16th| 16th(?:[);/ ]|$)'
-      model: '16th'
-    - regex: '(?:MZ-)?16 X(?:[);/ ]|$)'
-      model: '16X'
-    - regex: 'meizu (17|C9) Pro(?:[);/ ]|$)'
-      model: '$1 Pro'
-    - regex: 'MZ-?M3(?:[);/ ]|$)'
-      model: 'M3'
-    - regex: 'Meizu[_ ]note([89])(?:[);/ ]|$)'
-      device: 'phablet'
-      model: 'Note $1'
-
-    - regex: '(?:MZ-)?Meizu[_ ]([^/;]+) Build'
-      model: '$1'
-    - regex: '(?:MZ-)?Meizu[_ ]([a-z0-9_]+)'
-      model: '$1'
-    - regex: 'MZ-([^/;]+) Build'
-      model: '$1'
-
 # Meitu
 Meitu:
   regex: '(?:(?<!MI CC 9 )Meitu[2]?|MP1503|MP1512|MP160[235]|MP170[19]|MP171[138])(?:[);/ ]|$)'
@@ -13637,7 +13544,7 @@ OPPO:
       model: 'A35'
     - regex: '(?:PDAM10|CPH2069|CPH2061)(?:[);/ ]|$)'
       model: 'A52'
-    - regex: 'CPH(?:2127|2139)(?:[);/ ]|$)'
+    - regex: 'CPH(?:2127|213[19])(?:[);/ ]|$)'
       model: 'A53'
     - regex: 'CPH2135(?:[);/ ]|$)'
       model: 'A53s'
@@ -19554,6 +19461,8 @@ Xiaomi:
       model: 'Redmi 1S'
     - regex: 'HM 1(?:[);/ ]|$)'
       model: 'Redmi 1'
+    - regex: 'Redmi 8A Dual(?:[);/ ]|$)'
+      model: 'Redmi 8A Dual'
     - regex: 'M2004J7AC(?:[);/ ]|$)'
       model: 'Redmi 10X'
     - regex: '(?:M2004J19C|M2006C3MII|lancelot|galahad)(?:[);/ ]|$)'
@@ -19570,7 +19479,7 @@ Xiaomi:
       model: 'Redmi 9AT'
     - regex: '(?:M2010J19S[GYL]|pomelo)(?:[);/ ]|$)'
       model: 'Redmi 9T'
-    - regex: 'M2006C3MNG(?:[);/ ]|$)'
+    - regex: '(?:M2006C3MNG|Redmi 9C NFC)(?:[);/ ]|$)'
       model: 'Redmi 9C NFC'
     - regex: '21061119[AD]G(?:[);/ ]|$)'
       model: 'Redmi 10'
@@ -23966,13 +23875,15 @@ Spark:
 
 # SPC or SPC Universe or SPC Mobile (spc.es)
 SPC:
-  regex: '(?:Gravity Max|GRAVITY_OCTACORE|SPC SMART LITE|SPC_ALIEN(?:_STICK)?|SPC Glow9.7)(?:[);/ ]|$)'
+  regex: '(?:Gravity Max|GRAVITY 2|GRAVITY_OCTACORE|SPC SMART LITE|SPC_ALIEN(?:_STICK)?|SPC Glow9.7)(?:[);/ ]|$)'
   device: 'tablet'
   models:
     - regex: 'GRAVITY_OCTACORE'
       model: 'Gravity OctaCore'
     - regex: 'Gravity Max'
       model: 'Gravity Max'
+    - regex: 'GRAVITY 2'
+      model: 'Gravity 2'
     - regex: 'SPC Glow9.7'
       model: 'Glow 9.7"'
 
@@ -26060,6 +25971,12 @@ Gocomma:
   device: 'wearable'
   model: 'W5'
 
+# LEMFO
+LEMFO:
+  regex: '(LEM14)(?:[);/ ]|$)'
+  device: 'wearable'
+  model: '$1'
+
 # Urovo (en.urovo.com)
 Urovo:
   regex: '(?:DT40)(?:[);/ ]|$)'
@@ -26086,6 +26003,99 @@ Aocos:
   regex: 'AOCOS ([^);/]+)(?: Build|[);])'
   device: 'tablet'
   model: '$1'
+
+# Meizu
+Meizu:
+  regex: 'Meizu|MZ-(?!Fast)[A-Z]|(?<!POCO )(M04[05]|MZ-16th(?: Plus)?|MZ-16[st]|M7[12]1C|M35[1356]|M612C|M578CA|M181[36]|M1822|M681C|M6T|MX[ -]?[2345](?: Pro)?|(?:MZ-)?m[1-6] note|M621C|M1852|M57[18]C|M3[ESX]|M3 Max|M031|m1 metal|M1 E|(?<!Nubia |STELLAR )M2|M2 E|M5s Build|PRO [567]|PRO 7-[HS]| 15 Lite| 16th|MZ-15 (?:Lite|Plus)|15 Plus|MZ-16 X| 16 X| 16T|MX6)(?:[);/ ]|$)'
+  device: 'smartphone'
+  models:
+    - regex: '(?:MZ-)?M571C'
+      device: 'phablet'
+      model: 'M2 Note'
+    - regex: '(?:MZ-|Meizu-)?m([1-6])[_ ]note(?:[);/ ]|$)'
+      device: 'phablet'
+      model: 'M$1 Note'
+    - regex: '(?:MZ-)?M1 E(?:[);/ ]|$)'
+      model: 'M1E'
+    - regex: 'M2 E(?:[);/ ]|$)'
+      model: 'M2E'
+    - regex: '(?:MZ-)?M578C[A]?|M2(?:[);/ ]|$)'
+      model: 'M2'
+    - regex: 'M681C(?:[);/ ]|$)'
+      model: 'M3 Note'
+      device: 'phablet'
+    - regex: 'M621C(?:[);/ ]|$)'
+      model: 'M5 Note'
+      device: 'phablet'
+    - regex: 'M711C(?:[);/ ]|$)'
+      model: 'M6'
+    - regex: 'M721C(?:[);/ ]|$)'
+      model: 'M6 Note'
+      device: 'phablet'
+    - regex: '(M6T|MX6|M3E|M3X)(?:[);/ ]|$)'
+      model: '$1'
+    - regex: '(?:MZ-)?M3S(?:[);/ ]|$)'
+      model: 'M3s'
+    - regex: '(?:MZ-)?M3 Max(?:[);/ ]|$)'
+      model: 'M3 Max'
+    - regex: 'M5S|M612C'
+      model: 'M5S'
+    - regex: '(M04[05]|MX[ -]?2)(?:[);/ ]|$)'
+      model: 'MX2'
+    - regex: '(M35[1356]|MX[ -]?3)(?:[);/ ]|$)'
+      model: 'MX3'
+    - regex: 'MX[ -]?4 Pro(?:[);/ ]|$)'
+      model: 'MX4 Pro'
+    - regex: 'MX[ -]?4(?:[);/ ]|$)'
+      model: 'MX4'
+    - regex: '(Meizu[- _])?MX[ -]?5(?:[);/ ]|$)'
+      model: 'MX5'
+    - regex: 'm1 metal'
+      model: 'M1 Metal'
+    - regex: 'M1813(?:[);/ ]|$)'
+      model: 'M8'
+    - regex: '(?:M1816|M8 lite)(?:[);/ ]|$)'
+      model: 'M8 Lite'
+    - regex: 'M8c Pro(?:[);/ ]|$)'
+      model: 'M8c Pro'
+    - regex: 'PRO 7-[HS](?:[);/ ]|$)'
+      model: 'PRO 7'
+    - regex: 'PRO ([76]) Plus(?:[);/ ]|$)'
+      model: 'PRO $1 Plus'
+    - regex: 'PRO ([567])'
+      model: 'PRO $1'
+    - regex: 'M031(?:[);/ ]|$)'
+      model: 'MX Dual Core'
+    - regex: 'M1852(?:[);/ ]|$)'
+      model: 'X8'
+    - regex: 'M1822(?:[);/ ]|$)'
+      model: 'Note 8'
+    - regex: '(?:MZ-)?16T(?:[);/ ]|$)'
+      model: '16T'
+    - regex: '(?:MZ-)?16th Plus(?:[);/ ]|$)'
+      model: '16th Plus'
+    - regex: '(?:MZ-)?15 Plus(?:[);/ ]|$)'
+      model: '15 Plus'
+    - regex: '(?:MZ-15 Lite| 15 Lite)(?:[);/ ]|$)'
+      model: '15 Lite'
+    - regex: 'MZ-16th| 16th(?:[);/ ]|$)'
+      model: '16th'
+    - regex: '(?:MZ-)?16 X(?:[);/ ]|$)'
+      model: '16X'
+    - regex: 'meizu (17|C9) Pro(?:[);/ ]|$)'
+      model: '$1 Pro'
+    - regex: 'MZ-?M3(?:[);/ ]|$)'
+      model: 'M3'
+    - regex: '(?:Meizu[_ ])?note([89])(?:[);/ ]|$)'
+      device: 'phablet'
+      model: 'Note $1'
+
+    - regex: '(?:MZ-)?Meizu[_ ]([^/;]+) Build'
+      model: '$1'
+    - regex: '(?:MZ-)?Meizu[_ ]([a-z0-9_]+)'
+      model: '$1'
+    - regex: 'MZ-([^/;]+) Build'
+      model: '$1'
 
 # Devices with undectable brand, but detectable model
 Unknown:
