--- a/Tests/fixtures/smartphone-28.yml
+++ b/Tests/fixtures/smartphone-28.yml
@@ -1979,3 +1979,21 @@
     model: Redmi 8A Dual
   os_family: Android
   browser_family: Android Browser
+-
+  user_agent: Mozilla/5.0 (Linux; Android 9; SILVER_MAX Build/PPR1.180610.011; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/81.0.4044.111 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    version: 81.0.4044.111
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Kalley
+    model: Silver Max
+  os_family: Android
+  browser_family: Chrome
