--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9296,11 +9296,13 @@ Just5:
 
 # Kalley (www.kalley.com.co)
 Kalley:
-  regex: 'KALLEY|(?:ELEMENT (?:MAX|Q)|ELEMENT_PRO_2|K-BOOK(?:8MG|73G))(?:[);/ ]|$)'
+  regex: 'KALLEY|(?:ELEMENT (?:MAX|Q)|ELEMENT_PRO_2|K-BOOK(?:8MG|73G)|SILVER_MAX)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'ELEMENT MAX'
       model: 'Element Max'
+    - regex: 'SILVER_MAX'
+      model: 'Silver Max'
     - regex: 'ELEMENT Q'
       model: 'Element Q'
     - regex: 'ELEMENT_PRO_2'
