feat(device) detect brand Kalley model: Android TV R1 feat(device) detect brand Multilaser model: M7 3G Quad Core 3 (M7-3G_QC_3)
issue #6330

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9296,7 +9296,7 @@ Just5:
 
 # Kalley (www.kalley.com.co)
 Kalley:
-  regex: 'KALLEY|(?:ELEMENT (?:MAX|Q)|ELEMENT_PRO_2|K-BOOK(?:8MG|73G)|SILVER_MAX)(?:[);/ ]|$)'
+  regex: 'KALLEY|(?:ELEMENT (?:MAX|Q)|ELEMENT_PRO_2|K-BOOK(?:8MG|73G)|SILVER_MAX|ATV R[12])(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'ELEMENT MAX'
@@ -9310,6 +9310,9 @@ Kalley:
     - regex: 'K-BOOK(8MG|73G)'
       device: 'tablet'
       model: 'K-BOOK$1'
+    - regex: 'ATV (R[12])'
+      device: 'tv'
+      model: 'Android TV $1'
     - regex: 'KALLEY,(55D1240)'
       device: 'tv'
       model: '$1'
@@ -22293,7 +22296,7 @@ How:
 
 # Multilaser
 Multilaser:
-  regex: '(?:Multilaser[ _](?:[FEGH])(?:[_ ](?:Pro|Max|Lite))?|MS50[LGXM]|M7[_-]3G[_-]PLUS|MS5\.V2|MS45S_A6|ML([02]1|12)-M7s[- ]?Quad-?Core| ML01-M7-SD|MS45S|MS50S|MS60[XZ]|M7SQC_Plus|MS80X|MS40[GS]|MS55M|MS70|M7-3G QUAD CORE|M7s_?Lite|MS50L?_4G|MS60F(?:_PLUS)?)(?:[);/ ]|$)'
+  regex: '(?:Multilaser[ _](?:[FEGH])(?:[_ ](?:Pro|Max|Lite))?|MS50[LGXM]|M7[_-]3G[_-](?:PLUS|QC_3)|MS5\.V2|MS45S_A6|ML([02]1|12)-M7s[- ]?Quad-?Core| ML01-M7-SD|MS45S|MS50S|MS60[XZ]|M7SQC_Plus|MS80X|MS40[GS]|MS55M|MS70|M7-3G QUAD CORE|M7s_?Lite|MS50L?_4G|MS60F(?:_PLUS)?)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Multilaser[ _]G[_ ]Pro(?:[);/ ]|$)'
@@ -22318,6 +22321,9 @@ Multilaser:
     - regex: 'M7SQC_PLUS(?:[);/ ]|$)'
       device: 'tablet'
       model: 'M7SQC Plus'
+    - regex: 'M7-3G_QC_3(?:[);/ ]|$)'
+      device: 'tablet'
+      model: 'M7 3G Quad Core 3'
     - regex: 'M7-3G QUAD CORE(?:[);/ ]|$)'
       device: 'tablet'
       model: 'M7 3G Quad Core'
