--- a/Tests/fixtures/tablet-6.yml
+++ b/Tests/fixtures/tablet-6.yml
@@ -6330,3 +6330,21 @@
     model: Gravity 2
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Dalvik/1.6.0 (Linux; U; Android 4.4.2; M7-3G_QC_3 Build/KOT49H)
+  os:
+    name: Android
+    version: 4.4.2
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Multilaser
+    model: M7 3G Quad Core 3
+  os_family: Android
+  browser_family: Android Browser
