--- a/Tests/fixtures/tv-1.yml
+++ b/Tests/fixtures/tv-1.yml
@@ -2907,3 +2907,21 @@
     model: Smart Box Q2
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: TV Bro/1.0 Mozilla/5.0 (Linux; Android 9; ATV R1 Build/PTT1.190521.001; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/87.0.4280.101 Safari/537.36
+  os:
+    name: Android
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: TV Bro
+    version: "1.0"
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: tv
+    brand: Kalley
+    model: Android TV R1
+  os_family: Android
+  browser_family: Chrome
