feat(device) detect brand Tanix model: TX3 Mini

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -16190,13 +16190,15 @@ Thomson:
 
 # Tanix
 Tanix:
-  regex: '(?:TX5 MAX|TX[69]s)(?:[);/ ]|$)'
+  regex: '(?:TX5 MAX|TX[69]s|TX3 Mini)(?:[);/ ]|$)'
   device: 'tv'
   models:
     - regex: 'TX([69])s'
       model: 'TX$1s'
     - regex: 'TX5 MAX'
       model: 'TX5 Max'
+    - regex: 'TX3 Mini'
+      model: 'TX3 Mini'
 
 # pantech
 Pantech:
