--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -14128,7 +14128,7 @@ Pentagram:
 
 # Tcl (tcl.com)
 TCL:
-  regex: 'TCL,|TCL[_ -][a-z0-9]+|(?:TCL[_ -][^;/]+ Build)|(?:TCLGalaG60(?:\(9108A\))?|4187M|5087Z|5102B|5133A|5152D|5159[AJ]|5199I|6125[FD]|7040N|9048S|A50[279]DL|T78[02]H|T770[HB]|T774H|T671[HF]|T790Y|T766H_(?:RU|EEA)|T766[AJU]|T799[BH]|T775H|Percee TV|BeyondTV\d?)(?:[);/ ]|$)'
+  regex: 'TCL,|TCL[_ -][a-z0-9]+|(?:TCL[_ -][^;/]+ Build)|(?:TCLGalaG60(?:\(9108A\))?|4187M|5087Z|5102B|5133A|5152D|5159[AJ]|5199I|6125[FDH]|7040N|9048S|A50[279]DL|T78[02]H|T770[HB]|T774H|T671[HF]|T790Y|6156H|T766H|T766[AJU]|T799[BH]|T775H|Percee TV|BeyondTV\d?)(?:_(?:RU|EEA))?(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'TCLGalaG60(?:\(9108A\))?(?:[);/ ]|$)'
@@ -14137,8 +14137,10 @@ TCL:
       model: '20L'
     - regex: 'T775H(?:[);/ ]|$)'
       model: '20L Plus'
-    - regex: '6125[FD](?:[);/ ]|$)'
+    - regex: '6125[FDH]'
       model: '20E'
+    - regex: '6156H'
+      model: '20Y'
     - regex: '5199I(?:[);/ ]|$)'
       model: 'C9'
     - regex: 'A509DL(?:[);/ ]|$)'
@@ -20647,7 +20649,7 @@ ZTE:
       model: 'Optus X Start'
     - regex: 'BA520(?:[);/ ]|$)'
       model: 'Blade A520'
-    - regex: 'Blade (A(0620|310|321|452|460|462|465|475|510|512|52[012]|530|531|602|612|910)|L[12]10|L130|V0730|V0800|V580|V1000|E01)(?:[);/ ]|$)'
+    - regex: 'Blade (A(0620|3[13]0|321|452|460|462|465|475|510|512|52[012]C?|530|531|60[12]|612|[69]10C?)|L[12]10|L130|V0730|V0800|V580|V1000|E01)(?:[);/ ]|$)'
       model: 'Blade $1'
     - regex: 'Blade L2 Plus(?:[);/ ]|$)'
       model: 'Blade L2 Plus'
