feat(device) detect brand Hoozo model: YK P30

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -7419,12 +7419,15 @@ Hosin:
 
 # Hoozo (hoozoelectronics.com)
 Hoozo:
-  regex: '(?:HOOZO[_ ](MT232|MT116|MT Pad 116 LTE|X1001)|HZ0010|HZ1012)(?:[);/ ]|$)'
+  regex: '(?:HOOZO[_ ](MT232|MT116|MT Pad 116 LTE|X1001)|HZ0010|HZ1012|YK_P30(?:_EEA)?)(?:[);/ ]|$)'
   device: 'tablet'
   models:
     - regex: 'HOOZO[_ ](MT232|MT116|MT Pad 116 LTE|X1001)(?:[);/ ]|$)'
       model: '$1'
     - regex: '(HZ0010|HZ1012)(?:[);/ ]|$)'
+      model: '$1'
+    - regex: '(YK_P30)(?:_EEA)?(?:[);/ ]|$)'
+      device: 'smartphone'
       model: '$1'
 
 # Minix (minix.us)
