feat(device) detect brand Rombica model: TV Ultima feat(device) detect brand Polar model: P40L33T2CSM

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -14431,7 +14431,7 @@ Rombica:
   models:
     - regex: 'SSQ-A0500(?:[);/ ]|$)'
       model: 'Smart Stick 4K'
-    - regex: '(Infinity K8|Smart Box (?:v00[3-9]|Quad|Ultra HD v002|4K V001|B1|Q2))(?:[);/ ]|$)'
+    - regex: '(Infinity K8|Smart Box (?:v00[3-9]|Quad|Ultra HD v002|4K V001|B1|Q2)|TV Ultima)(?:[);/ ]|$)'
       model: '$1'
 
 # Rover
@@ -25943,7 +25943,7 @@ Glofiish:
 
 # Polar (polar.ru)
 Polar:
-  regex: 'Polar[_ ](P24L51T2CSM)(?:[);/ ]|$)'
+  regex: 'Polar[_ ](P24L51T2CSM|P40L33T2CSM)(?:[);/ ]|$)'
   device: 'tv'
   model: '$1'
 
