--- a/Tests/fixtures/tablet-6.yml
+++ b/Tests/fixtures/tablet-6.yml
@@ -6384,3 +6384,39 @@
     model: M7 3G Quad Core
   os_family: Android
   browser_family: Android Browser
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0; GEOFOX MID 743 Build/MRA58K) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/56.0.2924.87 Safari/537.36
+  os:
+    name: Android
+    version: "6.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 56.0.2924.87
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: GEOFOX
+    model: MID743
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; ATAB1021E) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/81.0.4044.138 Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 81.0.4044.138
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Acer
+    model: ATAB1021E
+  os_family: Android
+  browser_family: Chrome
