feat(device) detect new brand Parrot Mobile: Xplorer 2

--- a/Tests/fixtures/smartphone-28.yml
+++ b/Tests/fixtures/smartphone-28.yml
@@ -2303,3 +2303,21 @@
     model: YK P30
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; arm; Android 8.1.0; Xplorer_2) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/92.0.4515.166 YaApp_Android/21.84.1 YaSearchBrowser/21.84.1 BroPP/1.0 SA/3 Mobile Safari/537.36
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ARM
+  client:
+    type: browser
+    name: Yandex Browser
+    version: 21.84.1
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Parrot Mobile
+    model: Xplorer 2
+  os_family: Android
+  browser_family: Unknown
