feat(device) detect new brand Bubblegum model: BUB6R-3T feat(device) detect brand Urovo model: DT50 feat(device) detect brand DEXP model: Ursus L370i feat(device) detect brand Lenovo models: K11 (L38082), Tab M7 (TB-7305F) feat(device) detect brand Seuic model: CRUISE1 feat(device) detect brand Crosscall model: Core-T4 feat(device) detect brand Archos model: 101s Oxygen feat(device) detect brand Perfeo model: RATE (PF_A4552) feat(device) detect brand BQ model: Exion Max (BQ-1025L) feat(device) detect brand iTel model: P13 Plus, AC60 (L6004L)
feat(device) added test for brand STK model: Ace
feat(device) added test for brand itel model:  A45

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2432,6 +2432,9 @@ Archos:
     - regex: 'Archos 101 Oxygen(?:[);/ ]|$)'
       device: 'tablet'
       model: '101 Oxygen 4G'
+    - regex: 'Archos Oxygen 101S(?:[);/ ]|$)'
+      device: 'tablet'
+      model: '101s Oxygen'
     - regex: '(?:YL-)?Archos ([^/;]*(?:PAD)[^/;]*) Build'
       device: 'tablet'
       model: '$1'
@@ -4279,8 +4282,8 @@ bq:
     - regex: 'BQ(?:ru)?-7055L(?:[);/ ]|$)'
       model: 'Exion One'
       device: 'tablet'
-    - regex: 'BQ(?:ru)?-7055L(?:[);/ ]|$)'
-      model: 'Exion One'
+    - regex: 'BQ(?:ru)?-1025L(?:[);/ ]|$)'
+      model: 'Exion Max'
       device: 'tablet'
     - regex: 'BQ(?:ru)?-7081(?:[);/ ]|$)'
       model: 'Charm'
@@ -4891,7 +4894,7 @@ Cricket:
 
 # Crosscall
 Crosscall:
-  regex: 'Crosscall|ODYSSEY_Plus|Odyssey S1|Trekker-[MSX][1234]|Action-X3|Core-X[34]'
+  regex: 'Crosscall|ODYSSEY_Plus|Odyssey S1|Trekker-[MSX][1234]|Action-X3|Core-X[34]|Core-T4'
   device: 'smartphone'
   models:
     - regex: 'Action-X3'
@@ -4906,6 +4909,9 @@ Crosscall:
       model: 'ODYSSEY S1'
     - regex: 'Trekker-([MSX][1234](?: Core)?)'
       model: 'Trekker-$1'
+    - regex: 'Core-T4'
+      device: 'tablet'
+      model: 'Core-T4'
 
 # AllDocube (alldocube.com)
 AllDocube:
@@ -5193,7 +5199,7 @@ Desay:
 
 # DEXP (dexp.club)
 DEXP:
-  regex: 'DEXP|(?:Ursus|Ixion)[ _]([^;/)]+)|H135[ _]Build|Larus_TV1|Ixion(?:ML4.7|ES250)|M150Storm|(?:SENIOR|F4[38]D8000K|VA(?:[12]10|170)|ML450|MS[56]50|BL(?:[123]50|160|155)|BS(?:155|160|[1256]50)|(?<!ILIUM )S(?:3[78]0|2[89]0|670)|AL(?:[12]40|[23]50)|AS(?:155|[123]60)| (?:N280i|P310|P380i?|R1[18]0|Q110|E1[78]0|E[12]10|B(?:450|340|35[05])|M445|T155|U43F8000Q|A(?:1[456]0|340|[34]55)|GS15[035]|GL[23]55|G25[05]|G15[05]|ES750|XL150|Z[1-4]55|H170|H310|P510|L2[17]0)|Z250|A440|N[13]80i|L310i|(?<!VOX )G450|G660|Q[123]10|N[234]10|N[35]70|EX111)(?:[);/ ]|$)'
+  regex: 'DEXP|(?:Ursus|Ixion)[ _]([^;/)]+)|H135[ _]Build|Larus_TV1|Ixion(?:ML4.7|ES250)|M150Storm|(?:SENIOR|F4[38]D8000K|VA(?:[12]10|170)|ML450|MS[56]50|BL(?:[123]50|160|155)|BS(?:155|160|[1256]50)|(?<!ILIUM )S(?:3[78]0|2[89]0|670)|AL(?:[12]40|[23]50)|AS(?:155|[123]60)| (?:N280i|P310|P380i?|R1[18]0|Q110|E1[78]0|E[12]10|B(?:450|340|35[05])|M445|T155|U43F8000Q|A(?:1[456]0|340|[34]55)|GS15[035]|GL[23]55|G25[05]|G15[05]|ES750|XL150|Z[1-4]55|H170|H310|P510|L2[17]0)|Z250|A440|N[13]80i|L3[17]0i|(?<!VOX )G450|G660|Q[123]10|N[234]10|N[35]70|EX111)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Ixion[_ ]([^;/]+)(?: Build|\))'
@@ -5224,7 +5230,7 @@ DEXP:
     - regex: 'Ursus[ _]([^;/)]+)(?: Build|[);])'
       model: 'Ursus $1'
       device: 'tablet'
-    - regex: '(VA[21]10|VA170|E210|R1[18]0|Q110|N280i|P380i?|P[35]10|S2[89]0|S3[78]0|S670|H170|H310|L2[17]0|N[13]80i|N[234]10|E1[178]0|Q[123]10|EX111|N[35]70|L310i)(?:[);/ ]|$)'
+    - regex: '(VA[21]10|VA170|E210|R1[18]0|Q110|N280i|P380i?|P[35]10|S2[89]0|S3[78]0|S670|H170|H310|L2[17]0|N[13]80i|N[234]10|E1[178]0|Q[123]10|EX111|N[35]70|L3[17]0i)(?:[);/ ]|$)'
       model: 'Ursus $1'
       device: 'tablet'
 
@@ -9188,12 +9194,16 @@ iTel:
       model: 'A55 LTE'
     - regex: 'L6002P'
       model: 'S15 Pro'
+    - regex: 'L5002P'
+      model: 'A25 Pro'
     - regex: 'L5002'
-      model: 'A22'
+      model: 'A25'
     - regex: 'L5503'
       model: 'A46'
     - regex: 'W6004P'
       model: 'A56 Pro'
+    - regex: 'L6004L'
+      model: 'AC60'
     - regex: '[LW]6004'
       model: 'A56 LTE'
     - regex: 'W6001'
@@ -9226,7 +9236,7 @@ iTel:
       device: 'tablet'
       model: 'iNote Prime $1'
 
-    - regex: 'iTel ([^/;]*)Build'
+    - regex: 'iTel ([^/;)]+)(?: Build|[;)])'
       model: '$1'
     - regex: 'iTel[_ ]([a-z0-9\-_]*)'
       model: '$1'
@@ -10263,7 +10273,7 @@ Lenovo:
     - regex: 'Lenovo TB-X505' # 2019
       model: 'Tab M10'
       device: 'tablet'
-    - regex: 'TB-7305[IX](?:[);/ ]|$)'
+    - regex: 'TB-7305[IXF](?:[);/ ]|$)'
       model: 'Tab M7'
       device: 'tablet'
     - regex: 'Lenovo ?B8000(-[FH])?'
@@ -10439,6 +10449,8 @@ Lenovo:
       model: 'K6'
     - regex: 'L38043(?:[);/ ]|$)'
       model: 'K9'
+    - regex: 'L38082(?:[);/ ]|$)'
+      model: 'K11'
     - regex: 'P2A42(?:[);/ ]|$)'
       model: 'P2'
     - regex: 'k53a48(?:[);/ ]|$)'
@@ -24640,7 +24652,7 @@ Trio:
 
 # Seuic (en.seuic.com)
 Seuic:
-  regex: '(AUTOID9N)(?:[);/ ]|$)'
+  regex: '(AUTOID9N|CRUISE1)(?:[);/ ]|$)'
   device: 'smartphone'
   model: '$1'
 
@@ -25704,6 +25716,8 @@ Perfeo:
   models:
     - regex: 'Perfeo_PF_A4551'
       model: 'CHRONO'
+    - regex: 'Perfeo_PF_A4552'
+      model: 'RATE'
 
 # CGV (www.cgv.fr)
 CGV:
@@ -26006,10 +26020,10 @@ LEMFO:
 
 # Urovo (en.urovo.com)
 Urovo:
-  regex: '(?:DT40)(?:[);/ ]|$)'
+  regex: '(?:DT[45]0)(?:[);/ ]|$)'
   device: 'tablet'
   models:
-    - regex: '(DT40)'
+    - regex: '(DT[45]0)'
       device: 'peripheral'
       model: '$1'
 
@@ -26035,6 +26049,12 @@ Aocos:
 Parrot Mobile:
   regex: '(Xplorer_2)(?:[);/ ]|$)'
   device: 'smartphone'
+  model: '$1'
+
+# Bubblegum (bubblegumtablets.co.za)
+Bubblegum:
+  regex: '(BUB6R-3T)(?:[);/ ]|$)'
+  device: 'tablet'
   model: '$1'
 
 # Meizu
