--- a/Tests/fixtures/peripheral.yml
+++ b/Tests/fixtures/peripheral.yml
@@ -318,3 +318,21 @@
     model: HA14A LCD Projector
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 9; DT50 Build/PKQ1.190118.001; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/77.0.3865.92 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    version: 77.0.3865.92
+    engine: Blink
+    engine_version: ""
+  device:
+    type: peripheral
+    brand: Urovo
+    model: DT50
+  os_family: Android
+  browser_family: Chrome
