--- a/Tests/fixtures/tv-1.yml
+++ b/Tests/fixtures/tv-1.yml
@@ -2979,3 +2979,21 @@
     model: P40L33T2CSM
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; arm; Android 7.1.2; Perfeo_PF_A4552) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/88.0.4324.182 YaApp_Android/21.23.1/apad YaSearchBrowser/21.23.1/apad BroPP/1.0 SA/3 Mobile Safari/537.36
+  os:
+    name: Android
+    version: 7.1.2
+    platform: ARM
+  client:
+    type: browser
+    name: Yandex Browser
+    version: 21.23.1
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Perfeo
+    model: RATE
+  os_family: Android
+  browser_family: Unknown
